Fixing issue where spinner rendered too low on the page

--- a/app/assets/stylesheets/new_payment.scss
+++ b/app/assets/stylesheets/new_payment.scss
@@ -80,7 +80,6 @@ h4:after {
 .panel {
   margin-top: 25%;
 }
-
 .spinner-container {
   position: absolute;
   width: 100%;
@@ -90,7 +89,7 @@ h4:after {
   visibility: hidden;
 }
 .spinner.loading {
-  margin-top: 25%;
+  margin-top: 215px;
   padding: 50px;
   position: relative;
   text-align: center;
